--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -6,22 +6,113 @@ events {
 }
 
 http {
-  upstream docker {
+  upstream ropsten {
     server moralis-ropsten:8080;
     server moralis-ropsten-archive:8080;
+    server infura-ropsten:8080 backup;
+    server infura-ropsten:8080 backup;
   }
+
+  upstream kovan {
+    server moralis-kovan:8080;
+    server moralis-kovan-archive:8080;
+    server infura-kovan:8080 backup;
+    server infura-kovan:8080 backup;
+  }
+
+  upstream mainnet {
+    server moralis-mainnet:8080;
+    server moralis-mainnet-archive:8080;
+    server infura-mainnet:8080 backup;
+    server infura-mainnet:8080 backup;
+  }
+
+  upstream binance {
+    server moralis-binance:8080;
+    server moralis-binance-archive:8080;
+  }
+
+  upstream binance-test {
+    server moralis-binance-testnet:8080;
+    server moralis-binance-testnet-archive:8080;
+  }
+
+  upstream polygon {
+    server moralis-polygon:8080;
+    server moralis-polygon-archive:8080;
+    server alchemy-polygon:8080 backup;
+  }
+
+  upstream polygon-mumbai {
+    server moralis-polygon-mumbai:8080;
+    server moralis-polygon-mumbai-archive:8080;
+    server alchemy-polygon-mumbai:8080 backup;
+  }
+
 
   server {
     listen 8080;
 
-    location / {
-      proxy_pass http://docker;
+    location /eth/kovan {
+      proxy_pass http://kovan/;
       proxy_redirect off;
 
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /eth/ropsten {
+      proxy_pass http://ropsten/;
+      proxy_redirect off;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /eth/mainnet {
+      proxy_pass http://mainnet/;
+      proxy_redirect off;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /bsc/mainnet {
+      proxy_pass http://binance/;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /bsc/testnet {
+      proxy_pass http://binance-test/;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /polygon/mainnet {
+      proxy_pass http://polygon/;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /polygon/mumbai {
+      proxy_pass http://polygon-mumbai/;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
   }
+
+
 }
 
