--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -7,6 +7,9 @@ events {
 
 http {
   upstream ropsten {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-ropsten:8080;
     server moralis-ropsten-archive:8080;
     server infura-ropsten:8080 backup;
@@ -14,6 +17,9 @@ http {
   }
 
   upstream kovan {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-kovan:8080;
     server moralis-kovan-archive:8080;
     server infura-kovan:8080 backup;
@@ -21,6 +27,9 @@ http {
   }
 
   upstream mainnet {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-mainnet:8080;
     server moralis-mainnet-archive:8080;
     server infura-mainnet:8080 backup;
@@ -28,22 +37,34 @@ http {
   }
 
   upstream binance {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-binance:8080;
     server moralis-binance-archive:8080;
   }
 
   upstream binance-test {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-binance-testnet:8080;
     server moralis-binance-testnet-archive:8080;
   }
 
   upstream polygon {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-polygon:8080;
     server moralis-polygon-archive:8080;
     server alchemy-polygon:8080 backup;
   }
 
   upstream polygon-mumbai {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
     server moralis-polygon-mumbai:8080;
     server moralis-polygon-mumbai-archive:8080;
     server alchemy-polygon-mumbai:8080 backup;
