--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,6 +40,8 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server moralis-binance:8080;
+    server moralis-binance-archive:8080;
     server dataseed-binance:8080;
     server dataseed-binance-1:8080;
     server dataseed-binance-1-2:8080;
