--- a/moralis/docker-compose.yml
+++ b/moralis/docker-compose.yml
@@ -90,12 +90,12 @@ services:
       - HOST=https://eth-mainnet.alchemyapi.io/v2/xWjz3Gf53QIWM80eqYkYWXFAeGU3uU1R
 
   # ----------
-  dataseed-binance:
-    image: nginx
-    volumes:
-      - ./server.conf.template:/etc/nginx/templates/default.conf.template
-    environment:
-      - HOST=https://bsc-dataseed.binance.org
+  # dataseed-binance:
+  #   image: nginx
+  #   volumes:
+  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
+  #   environment:
+  #     - HOST=https://bsc-dataseed.binance.org
 
 
   dataseed-binance-1:
@@ -113,34 +113,34 @@ services:
       - HOST=https://bsc-dataseed1.defibit.io
 
   
-  # dataseed-binance-3:
-  #   image: nginx
-  #   volumes:
-  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
-  #   environment:
-  #     - HOST=https://bsc-dataseed3.defibit.io
-
-  # dataseed-binance-4:
-  #   image: nginx
-  #   volumes:
-  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
-  #   environment:
-  #     - HOST=https://bsc-dataseed4.ninicoin.io
-
-
-  moralis-binance:
+  dataseed-binance-3:
     image: nginx
     volumes:
       - ./server.conf.template:/etc/nginx/templates/default.conf.template
     environment:
-      - HOST=https://speedy-nodes-nyc.moralis.io/8113f2a7f4c35932eeec0c0d/bsc/mainnet
+      - HOST=https://bsc-dataseed3.defibit.io
 
-  moralis-binance-archive:
+  dataseed-binance-4:
     image: nginx
     volumes:
       - ./server.conf.template:/etc/nginx/templates/default.conf.template
     environment:
-      - HOST=https://speedy-nodes-nyc.moralis.io/8113f2a7f4c35932eeec0c0d/bsc/mainnet/archive
+      - HOST=https://bsc-dataseed4.ninicoin.io
+
+
+  # moralis-binance:
+  #   image: nginx
+  #   volumes:
+  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
+  #   environment:
+  #     - HOST=https://speedy-nodes-nyc.moralis.io/8113f2a7f4c35932eeec0c0d/bsc/mainnet
+
+  # moralis-binance-archive:
+  #   image: nginx
+  #   volumes:
+  #     - ./server.conf.template:/etc/nginx/templates/default.conf.template
+  #   environment:
+  #     - HOST=https://speedy-nodes-nyc.moralis.io/8113f2a7f4c35932eeec0c0d/bsc/mainnet/archive
 
   # ----------
 
@@ -225,13 +225,14 @@ services:
       - moralis-mainnet-archive
       - infura-mainnet
       - alchemy-mainnet
-      - moralis-binance
-      - moralis-binance-archive
-      - dataseed-binance
+      # - moralis-binance
+      # - moralis-binance-archive
+      # - dataseed-binance
+      - dataseed-binance-3
+      - dataseed-binance-4
       - dataseed-binance-1
       - dataseed-binance-1-2
-      # - dataseed-binance-3
-      # - dataseed-binance-4
+  
       - moralis-binance-testnet
       - moralis-binance-testnet-archive
       - moralis-polygon
