--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,10 +40,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server dataseed-binance-3:8080;
-    server dataseed-binance-4:8080;
-    server dataseed-binance-1:8080;
-    server dataseed-binance-1-2:8080;
+    server infstones-binance:8080;
   }
 
   upstream binance-test {
