--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,6 +40,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server infstones-binance-archive:8080;
     server infstones-binance:8080;
   }
 
