--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -41,6 +41,7 @@ http {
     zone upstream_dynamic 256k;
 
     server infstones-binance-archive:8080;
+    server infstones-binance-archive-2:8080;
     server infstones-binance:8080;
   }
 
