--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,9 +40,12 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server infstones-binance:8080;
+    server infstones-binance-2:8080;
+    server infstones-binance-3:8080;
     server infstones-binance-archive:8080;
     server infstones-binance-archive-2:8080;
-    server infstones-binance:8080;
+    server infstones-binance-archive-3:8080;
   }
 
   upstream binance-test {
