--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,10 +40,9 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-binance:8080;
-    server moralis-binance-archive:8080;
+    server dataseed-binance:8080;
+    server dataseed-binance-2:8080;
     server dataseed-binance-3:8080;
-    server dataseed-binance-4:8080;
   }
 
   upstream binance-test {
