--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -45,6 +45,20 @@ http {
     server dataseed-binance-3:8080;
   }
 
+  upstream fantom {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
+    server moralis-fantom:8080;
+  }
+
+  upstream avalanche {
+    keepalive 512;
+    zone upstream_dynamic 256k;
+
+    server moralis-avalanche:8080;
+  }
+
   upstream binance-test {
     keepalive 512;
     zone upstream_dynamic 256k;
@@ -86,6 +100,24 @@ http {
 
     location /eth/ropsten {
       proxy_pass http://ropsten/;
+      proxy_redirect off;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /fantom/mainnet {
+      proxy_pass http://fantom/;
+      proxy_redirect off;
+
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /avalanche/mainnet {
+      proxy_pass http://avalanche/;
       proxy_redirect off;
 
       proxy_set_header Host $host;
