chore: add depends on

--- a/moralis/docker-compose.yml
+++ b/moralis/docker-compose.yml
@@ -304,6 +304,9 @@ services:
       - dataseed-binance-2
       - dataseed-binance-3
 
+      - moralis-fantom
+      - moralis-avalanche
+
       # - infstones-binance
       # - infstones-binance-2
       # - infstones-binance-3
