--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -50,6 +50,7 @@ http {
     zone upstream_dynamic 256k;
 
     server moralis-fantom:8080;
+    server rpc-fantom:8080;
   }
 
   upstream avalanche {
@@ -57,6 +58,7 @@ http {
     zone upstream_dynamic 256k;
 
     server moralis-avalanche:8080;
+    server rpc-avalanche:8080;
   }
 
   upstream binance-test {
