--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -40,6 +40,7 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
+    server bsc-rpc:8080;
     server dataseed-binance:8080;
     server dataseed-binance-2:8080;
     server dataseed-binance-3:8080;
