--- a/moralis/load-balancer.conf
+++ b/moralis/load-balancer.conf
@@ -74,9 +74,8 @@ http {
     keepalive 512;
     zone upstream_dynamic 256k;
 
-    server moralis-polygon:8080;
-    server moralis-polygon-archive:8080;
-    server alchemy-polygon:8080 backup;
+    server rpc-polygon:8080;
+    server matic-vigil-polygon:8080;
   }
 
   upstream polygon-mumbai {
